# sensor_scenario

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
gateway/: Cargo.toml
generator/: Cargo.toml
generator/src/: main.rs  sensor.rs
src/consumer/: main.rs
src/gateway/: main.rs
src/producer/: main.rs  sensor.rs
src/sensor/: main.rs  reading.rs
