[package]
name = "sensor_scenario"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sensor"
path = "src/sensor/main.rs"

[[bin]]
name = "gateway"
path = "src/gateway/main.rs"

[[bin]]
name = "consumer"
path = "src/consumer/main.rs"

[dependencies]
dotenvy = "0.15"
iggy = "0.10.0"
rand = "0.10.0"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.52.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
